# sport-dh-be

./: .gitignore  PROJECT_ANALYSIS.md  context_be.md  convert_uuid_text_to_uuid.sql  db.sqlite3  manage.py  plan_vip_chat_bot.md  pyproject.toml
app/booking/: models.py
app/booking/migrations/: 0001_initial.py
app/sport_center/: apps.py  models.py
app/user/: serializers.py  views.py
app/user/migrations/: 0001_initial.py
app/user/routers/: register.py  user.py
app/user/serializer_container/: __init__.py  custom_token.py  register.py  user.py
apps/booking/: __init__.py  apps.py  booking_stats_api.md  models.py  serializers.py  tests.py  urls.py  views.py
apps/chat/: README.md  admin.py  models.py  services.py  urls.py  views.py
apps/depends/: cookie_jwt_auth.py  oauth2.py
apps/fake_data/: README.md  __init__.py  apps.py  urls.py  views.py
apps/sport_center/: apps.py  models.py  serializers.py  urls.py  views.py
apps/user/: models.py  serializers.py  urls.py  views.py
apps/user/routers/: user.py  (+1 more)
apps/utils/: chat_bot.py  constant_status.py  enum_type.py  mapping_data.py  regenerate_previews.py  send_mail.py  utils.py  validate_data.py
media/: booking-ui-flow.md  booking_api_docs.md
sport_dh/: asgi.py  settings.py  urls.py  urls_api.py  wsgi.py
sport_dh/utils/: cookie_utils.py  enum_type.py  send_mail.py
user/: models.py  serializers.py  views.py
user/migrations/: 0001_initial.py
user/routers/: register.py  user.py
user/serializer_container/: custom_token.py  register.py  user.py
user/view_container/: __init__.py  register.py  user.py
(+46 files in other folders)
